--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "draggable-slider",
+  "name": "draggable-slider-component",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
